public/game.css
@import url('https://fonts.googleapis.com/css?family=Raleway');
@import url('https://fonts.googleapis.com/css?family=Roboto');
@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
html, body {
    height: 100%;
    scroll-behavior: smooth;
    font-family: 'Roboto', 'Helvetica', 'Arial';
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
    background-color: rgb(143,235,218);
}
.body::-webkit-scrollbar {
    display: none;
}
iframe {
    display: block;
    width: 480px;
    height: 400px;
    padding: 12px;
}
a {
    color: rgb(15, 61, 146);
    text-decoration: none;
}
a:hover {
    text-decoration: underline;
}
.tl {
    text-align: left;
}
.tc {
    text-align: center;
}
.sc {
    font-variant: small-caps;
}
.bf {
    font-size: 32pt;
}
.svmarg {
    margin-top: 10px;
    margin-bottom: 10px;
}
.box {
    background-color: powderblue;
    height: 100%;
}
.xlvertsep {
    height: 100px;
}
#below h1 {
    font-family: 'Raleway', 'Arial';
    font-size: 48pt;
    margin-bottom: 32px
}
.splide__list li {
    border-radius: 1rem;
}
.spcl {
    max-width: 1280px;
}
#top {
    height: 100vh;
}
#screenitem {
    opacity: 1;
    transition: opacity 3s ease;
}
#peer_form {
    position: absolute;
    width: 100%;
    transition: bottom 4s cubic-bezier(0.550, 0.055, 0.675, 0.190);
    bottom: 0%;
}
.ctrflex {
    z-index: 10;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
}
#bottombox {
    display: flex;
    flex-direction: column;
    margin: 12px;
    text-align: left;
    /* background-color: #e65100; */
}
#bottombox ul {
    list-style-type: none;
}
#bottombox ul li:nth-child(1) {
	float: left;
}
#bottombox ul li:nth-child(2) {
	float: right;
}
#bottom {
    position: absolute;
    width: 100%;
    bottom: 0px;
    /* background-color: rgba(255, 255, 255, 0.5); */
}
.spacecolor {
    background: rgb(143,235,218);
    background: -moz-linear-gradient(0deg, rgba(143,235,218,1) 0%, rgba(60,151,175,1) 14%, rgba(60,43,108,1) 40%, rgba(55,34,89,1) 52%, rgb(30, 17, 37) 77%);
    background: -webkit-linear-gradient(0deg, rgba(143,235,218,1) 0%, rgba(60,151,175,1) 14%, rgba(60,43,108,1) 40%, rgba(55,34,89,1) 52%, rgb(30, 17, 37) 77%);
    background: linear-gradient(0deg, rgba(143,235,218,1) 0%, rgba(60,151,175,1) 14%, rgba(60,43,108,1) 40%, rgba(55,34,89,1) 52%, rgb(30, 17, 37) 77%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#8febda",endColorstr="#2b1833",GradientType=1); 
}
.logo {
    z-index: 5;
    background-image: url("logo.png");
    background-color: rgba(109, 56, 110, 0.6);
    min-width: 240px;
    min-height: 240px;
    border-radius: 25%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    color: white;
    margin-top: 15vh;
}
.gyf {
    height: 100%;
    font-size: 70px;
    position: relative;
    font-family: 'Raleway', 'Helvetica', 'Arial';
}
.gyf p {
    position: absolute;
    opacity: 0.7;
    top: 50%;
    left: 50%;
    width: 100vw;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}
.notification {
    border-radius: 5px;
    font-family: 'Raleway', 'Arial';
    font-weight: normal;
    padding: 10px 20px 10px 20px;
    margin-bottom: 10px;
    transition: 0.3s;
    top: 25px;
    position: absolute;
    display: none;
}
.cleanbox {
    min-width: 320px;
    border-radius: 8px;
    box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
    background-color: white;
}
.formbox {
    z-index: inherit;
    margin-top: 50px;
    padding: 30px 20px 10px 20px;
}

.formbox h3 {
    font-family: 'Roboto', 'Arial';
    font-weight: 200;
    text-align: center;
}

.form-group {
    font-family: 'Roboto', 'Arial';
    display: flex;
    flex-direction: column;
    margin: 10px 0px 10px 0px;
    min-height: 80px;
}
.form-group input {
    font-family: 'Roboto', 'Arial';
    font-size: large;
    padding: 15px 14px 15px 14px;
    border-radius: 5px;
    border: 2px solid #AAA;
}
.form-group input:invalid {
    box-shadow: none;
}
.form-group input:focus {
    outline: none;
    border-color: #e65100;
}
.form-group>label {
    color: #777;
    margin: 0px auto 0px 10px;
    bottom: 39px;
    position: relative;
    background-color: white;
    padding: 0px 5px 0px 5px;
    font-size: large;
    transition: 0.2s;
    pointer-events: none;
}
.form-control:focus~label {
    bottom: 63px;
    font-size: small;
    color: #e65100;
}
.form-control:valid~label {
    bottom: 63px;
    font-size: small;
}
.form-control:read-only~label {
    bottom: 63px;
    font-size: small;
}
button {
    margin: 0px;
    position: relative;
    width: 100%;
    padding: 10px 5px 10px 5px;
    border: none;
    border-radius: 5px;
    font-family: 'Roboto', 'Arial';
    font-size: 14pt;
    font-weight: 600;
    letter-spacing: 0.05em;
    background-color: #ffa726;
    margin-bottom: 0px;
    transition: 0.1s;
    box-shadow: 0px 2px 1px rgba(0,0,0,0.15);
}
button:hover {
    background-color: #f57c00;
    cursor: pointer;
}
button:active {
    background-color: #ef6c00;
}
button:focus {
    outline: none;
}

.stars{
    background-image: url("star.png");
    background-size: contain;
    background-repeat: repeat-x;
    z-index: 0;
    position: absolute;
    width: 100%;
    height: 400px;
    overflow: hidden;
}

.lines{
    z-index: 0;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
}
.lines li{
    position: absolute;
    display: block;
    list-style: none;
    width: 2px;
    height: 20px;
    background: rgba(255, 255, 255, 0.5);
    animation: animate 10s linear infinite;
    bottom: -150px;
}
@keyframes animate {
    0%{
        opacity: 1;
    }
    100%{
        transform: translateY(-600px);
        opacity: 0;
    }
}
.lines li:nth-child(1){
    left: 25%;
    height: 124px;
    animation-delay: 7s;
    animation-duration: 6s;
}
.lines li:nth-child(2){
    left: 40%;
    height: 58px;
    animation-delay: 6s;
    animation-duration: 13.5s;
}
.lines li:nth-child(3){
    left: 83%;
    height: 175px;
    animation-delay: 12s;
    animation-duration: 4s;
}
.lines li:nth-child(4){
    left: 62%;
    height: 110px;
    animation-delay: 5s;
    animation-duration: 7s;
}
.lines li:nth-child(5){
    left: 93%;
    height: 79px;
    animation-delay: 13s;
    animation-duration: 10s;
}
.lines li:nth-child(6){
    left: 36%;
    height: 54px;
    animation-delay: 5s;
    animation-duration: 13s;
}
.lines li:nth-child(7){
    left: 55%;
    height: 87px;
    animation-delay: 0s;
    animation-duration: 12s;
}
.lines li:nth-child(8){
    left: 23%;
    height: 99px;
    animation-delay: 2s;
    animation-duration: 11s;
}
.lines li:nth-child(9){
    left: 75%;
    height: 85px;
    animation-delay: 6s;
    animation-duration: 14.3s;
}
.lines li:nth-child(10){
    left: 13%;
    height: 101px;
    animation-delay: 3s;
    animation-duration: 8s;
}

.blackoverlay {
    position: absolute;
    top: 0px;
    width: 100vw;
    height: 100vh;
    background: rgb(0,0,0);
    background: -moz-linear-gradient(0deg, rgba(10,10,10,0.7) 0%, rgba(0,0,0,0.7) 100%);
    background: -webkit-linear-gradient(0deg, rgba(10,10,10,0.7) 0%, rgba(0,0,0,0.7) 100%);
    background: linear-gradient(0deg, rgba(10,10,10,0.7) 0%, rgba(0,0,0,0.7) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#292929",endColorstr="#000000",GradientType=1);
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    z-index: -3;
    opacity: 0;
    transition: opacity 0.5s cubic-bezier(0.22, 1, 0.36, 1);
    font-family: 'Raleway';
}

#summarybox {
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 30px 10px 30px 10px;
    min-width: 320px;
    width: auto;
    font-family: 'Raleway';
    font-size: 18pt;
    transform: scale(0, 0);
    transition: transform 0.5s cubic-bezier(0.020, 0.855, 0.830, 1.225);
}

.flcol {
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#pacereport{
    margin: auto;
    display: flex;
    flex-direction: column;
}

#paceflavor{
    font-family: 'Roboto';
    font-size: 12pt;
}

#workoutreport {
    text-align: center;
    width: 100%;
}

.lefttable {
    font-family: 'Roboto';
    font-size: 14pt;
    width: 100%;
    text-align: left;
    color: #222;
}

#statreport {
    width: 100%;
}

.tableicon {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    font-feature-settings: 'liga';
    -moz-font-feature-settings: 'liga';
    -moz-osx-font-smoothing: grayscale;
    transform: translateY(3px);
    color: #263985;
}
.reportbtn {
    letter-spacing: normal;
    font-weight: normal;
}
.num {
    color: rgb(65, 65, 65);
    font-family: 'Courier New', Courier, monospace;
    font-size: small;
}
.pausetext {
    font-size: 50pt;
    color: white;
}
.unpausebtn {
    margin: 20px;
    font-weight: normal;
}
#below {
    background-color: #FFF;
    height: 100vh;
}
#pointdown {
    animation: floating 2s cubic-bezier(0.65, 0, 0.35, 1) infinite;
    font-size: 72pt;
    position: absolute;
    bottom: 0px;
    margin: auto;
    cursor: pointer;
    font-family: 'Material Icons';
    -webkit-user-select: none; /* Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
    opacity: 0.5;
    color: #ffffff;
}
#pointdown a:hover {
    text-decoration: none;
}
#pointdown:hover {
    animation-duration: 1s;
}
@keyframes floating {
    50%{
        transform: translateY(-10px);
    }
}

